Fixed Sponsor links, also added to do to refactor it

--- a/commands.html
+++ b/commands.html
@@ -238,15 +238,15 @@
                         <img src="img/github-142-svgrepo-com.svg" width="18" height="18" alt="GitHub">
                         <span>Sponsor</span>
                     </a>
-                    <a href="https://ko-fi.com/vimmaster" class="donation-btn kofi" title="Ko-fi">
+                    <a href="https://ko-fi.com/renzor" class="donation-btn kofi" title="Ko-fi">
                         <img src="img/kofi-svgrepo-com.svg" width="18" height="18" alt="Ko-fi">
                         <span>Ko-fi</span>
                     </a>
-                    <a href="https://buymeacoffee.com/vimmaster" class="donation-btn coffee" title="Buy Me Coffee">
+                    <a href="https://buymeacoffee.com/renzorlive" class="donation-btn coffee" title="Buy Me Coffee">
                         <img src="img/buy-me-a-coffee-svgrepo-com.svg" width="18" height="18" alt="Buy Me Coffee">
                         <span>Coffee</span>
                     </a>
-                    <a href="https://patreon.com/vimmaster" class="donation-btn patreon" title="Patreon">
+                    <a href="https://patreon.com/renzor" class="donation-btn patreon" title="Patreon">
                         <img src="img/patreon-141-svgrepo-com.svg" width="18" height="18" alt="Patreon">
                         <span>Patreon</span>
                     </a>
