--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                             <span>Monthly support</span>
                         </div>
                     </a>
-                    <a href="https://ko-fi.com/vimmaster" class="sponsor-card kofi">
+                    <a href="https://ko-fi.com/renzor" class="sponsor-card kofi">
                         <div class="sponsor-icon">
                             <img src="img/kofi-svgrepo-com.svg" width="24" height="24" alt="Ko-fi">
                         </div>
@@ -360,7 +360,7 @@
                             <span>One-time donation</span>
                         </div>
                     </a>
-                    <a href="https://buymeacoffee.com/vimmaster" class="sponsor-card coffee">
+                    <a href="https://buymeacoffee.com/renzorlive" class="sponsor-card coffee"></a>
                         <div class="sponsor-icon">
                             <img src="img/buy-me-a-coffee-svgrepo-com.svg" width="24" height="24" alt="Buy Me Coffee">
                         </div>
@@ -369,7 +369,7 @@
                             <span>Support development</span>
                         </div>
                     </a>
-                    <a href="https://patreon.com/vimmaster" class="sponsor-card patreon">
+                    <a href="https://patreon.com/renzor" class="sponsor-card patreon">
                         <div class="sponsor-icon">
                             <img src="img/patreon-141-svgrepo-com.svg" width="24" height="24" alt="Patreon">
                         </div>
