Fixed footer and github api call

--- a/features.html
+++ b/features.html
@@ -445,6 +445,9 @@
         </div>
     </div>
 
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+
     <!-- JavaScript for navigation highlighting -->
     <script>
         // Highlight active navigation links
