--- a/mobile-test.html
+++ b/mobile-test.html
@@ -268,6 +268,9 @@ gameState.mode = <span class="string">'INSERT'</span>;</pre>
         </div>
     </div>
 
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+
     <!-- Toast Container -->
     <div id="toast-container" class="toast-container"></div>
 
